[package]
name = "ssi-jws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["secp256k1", "secp256r1", "ed25519", "rsa"]
secp256k1 = ["k256", "ssi-crypto/k256", "ssi-jwk/secp256k1"]
secp256r1 = ["p256", "ssi-crypto/p256", "ssi-jwk/secp256r1"]
ed25519 = ["ed25519-dalek", "ssi-jwk/ed25519-dalek"]
rsa = ["dep:rsa", "ssi-jwk/rsa", "rand_old", "sha2"]
openssl = []

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.12"
k256 = { version = "0.9", optional = true, features = ["zeroize", "ecdsa"] }
p256 = { version = "0.9", optional = true, features = ["zeroize", "ecdsa"] }
blake2b_simd = "0.5"
ed25519-dalek = { version = "1", optional = true }
sha2 = { version = "0.9", optional = true }
rsa = { version = "0.3", optional = true }
rand_old = { package = "rand", version = "0.7", optional = true }
ssi-core = { path = "../ssi-core", version = "0.1"}
ssi-crypto = { path = "../ssi-crypto", version = "0.1"}
ssi-jwk = { path = "../ssi-jwk", version = "0.1"}


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clear_on_drop = "0.2.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
clear_on_drop = { version = "0.2.4", features = ["no_cc"] }
