[package]
name = "ssi-jws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["secp256k1", "secp256r1", "ed25519", "rsa", "eip", "ssi-jwk/ripemd-160"]
## enable secp256k1 signatures
secp256k1 = ["ssi-jwk/secp256k1", "k256/keccak256", "ssi-crypto/secp256k1"]
## enable secp256r1 (p256) signatures
secp256r1 = ["ssi-jwk/secp256r1", "p256"]
## enable ed25519 (EdDSA) signatures
ed25519 = ["ssi-jwk/ed25519", "ed25519-dalek", "rand_old"]
## enable RSA signatures
rsa = ["ssi-jwk/rsa", "dep:rsa", "dep:sha2"]
## enable aleo ecosystem signatures
aleo = ["ssi-jwk/aleo"]
## enable ethereum style signatures
eip = ["ssi-jwk/eip", "ssi-crypto/keccak", "k256/keccak256"]
## enable tezos style signatures
tezos = ["ssi-jwk/tezos", "blake2b_simd", "secp256k1", "secp256r1"]

## Use the Ring crate for crypto operations
openssl = ["ssi-jwk/openssl", "dep:openssl"]
## Use the OpenSSL crate for crypto operations
ring = ["ssi-jwk/ring", "dep:ring", "rand"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.12"
k256 = { version = "0.9", optional = true, features = ["zeroize", "ecdsa"] }
p256 = { version = "0.9", optional = true, features = ["zeroize", "ecdsa"] }
blake2b_simd = { version = "0.5", optional = true }
ed25519-dalek = { version = "1", optional = true }
sha2 = { version = "0.9", optional = true }
rsa = { version = "0.3", optional = true }
rand_old = { package = "rand", version = "0.7", optional = true }
rand = { version = "0.8", optional = true }
openssl = { version = "0.10", optional = true }
ring = { version = "0.16", optional = true }
ssi-core = { path = "../ssi-core", version = "0.1"}
ssi-crypto = { path = "../ssi-crypto", version = "0.1"}
ssi-jwk = { path = "../ssi-jwk", version = "0.1"}


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clear_on_drop = "0.2.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
clear_on_drop = { version = "0.2.4", features = ["no_cc"] }
