[package]
name = "ssi-ldp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["eip", "tezos", "w3c", "solana"]
## enable LDPs from the W3C linked data proof registry: ed25519, secp256k1, rsa2018, secp256r1
w3c = ["secp256k1", "secp256r1", "rsa", "ed25519"]
secp256k1 = ["ssi-jws/secp256k1", "k256"]
secp256r1 = ["ssi-jws/secp256r1", "p256"]
secp384r1 = ["ssi-jws/secp384r1"]
ed25519 = ["ssi-jws/ed25519"]
rsa = ["ssi-jws/rsa"]
## enable the EIP-defined LDPs: EIP712
eip = ["keccak-hash", "ssi-caips/eip", "secp256k1", "ssi-jws/eip"]
## enable LDPs from the Tezos Ecosystem
tezos = ["ssi-tzkey", "ssi-jws/tezos", "ssi-caips/tezos", "secp256k1", "secp256r1"]
## enable LDPs from the Aleo Ecosystem
aleo = ["ssi-jws/aleo", "ssi-caips/aleo"]
## enable LDPs from the Solana Ecosystem
solana = []

example-http-issuer = []
test = []

[dependencies]
thiserror = "1.0"
async-trait = "0.1"
lazy_static = "1.4"
bs58 = { version = "0.4", features = ["check"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1"
hex = "0.4"
multibase = "0.8"
k256 = { version = "0.11", optional = true, features = ["ecdsa"] }
p256 = { version = "0.11", optional = true, features = ["ecdsa"] }
keccak-hash = { version = "0.7", optional = true }
ssi-jwk = { path = "../ssi-jwk", version = "0.1"}
ssi-json-ld = { path = "../ssi-json-ld", version = "0.1"}
ssi-core = { path = "../ssi-core", version = "0.1"}
ssi-dids = { path = "../ssi-dids", version = "0.1"}
ssi-crypto = { path = "../ssi-crypto", version = "0.1"}
ssi-jws = { path = "../ssi-jws", version = "0.1"}
ssi-tzkey = { path = "../ssi-tzkey", version = "0.1", optional = true}
ssi-caips = { path = "../ssi-caips", version = "0.1" }
ssi-contexts = { version = "0.1.3", path = "../contexts" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

[dev-dependencies]
async-std = { version = "1.9", features = ["attributes"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
