[package]
name = "ssi-ldp"
version = "0.3.2"
edition = "2021"
authors = ["Spruce Systems, Inc."]
license = "Apache-2.0"
description = "Verifiable Credential Data Integrity 1.0 implementation for the `ssi` library."
repository = "https://github.com/spruceid/ssi/"
documentation = "https://docs.rs/ssi-ldp/"

[dependencies]
rdf-types.workspace = true
treeldr-rust-prelude.workspace = true
ssi-crypto.workspace = true
ssi-jwk.workspace = true
ssi-jws.workspace = true
ssi-rdf.workspace = true
ssi-vc.workspace = true
chrono.workspace = true
multibase.workspace = true
iref.workspace = true
thiserror.workspace = true

[dev-dependencies]
async-std = { version = "1.9", features = ["attributes"] }
treeldr-rust-macros.workspace = true
static-iref.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
