[package]
name = "ssi-ldp"
version = "0.3.2"
edition = "2021"
authors = ["Spruce Systems, Inc."]
license = "Apache-2.0"
description = "Implementation of Linked Data Proofs for the ssi library."
repository = "https://github.com/spruceid/ssi/"
documentation = "https://docs.rs/ssi-ldp/"

[features]
default = ["eip", "tezos", "w3c", "solana", "bbsplus"]
## enable LDPs from the W3C linked data proof registry: ed25519, secp256k1, rsa2018, secp256r1
w3c = ["secp256k1", "secp256r1", "rsa", "ed25519"]
secp256k1 = ["ssi-jws/secp256k1", "k256"]
secp256r1 = ["ssi-jws/secp256r1", "p256"]
secp384r1 = ["ssi-jws/secp384r1"]
ed25519 = ["ssi-jws/ed25519"]
rsa = ["ssi-jws/rsa"]
## enable the EIP-defined LDPs: EIP712
eip = ["keccak-hash", "ssi-caips/eip", "secp256k1", "ssi-jws/eip", "sha3"]
## enable LDPs from the Tezos Ecosystem
tezos = [
  "ssi-tzkey",
  "ssi-jws/tezos",
  "ssi-caips/tezos",
  "secp256k1",
  "secp256r1",
]
## enable LDPs from the Aleo Ecosystem
aleo = ["ssi-jws/aleo", "ssi-caips/aleo"]
## enable LDPs from the Solana Ecosystem
solana = []
bbsplus = []

example-http-issuer = []
test = []

[dependencies]
bbs = { version = "0.4.1" }
base64 = "0.12"
thiserror = "1.0"
async-trait = "0.1"
lazy_static = "1.4"
iref = { version = "2.2.3", features = ["hashbrown"] }
static-iref = "2.0"
rdf-types = "0.12.15"
grdf = "0.16.2"
json-syntax = { version = "0.9", features = ["serde"] }
locspan = "0.7.13"
bs58 = { version = "0.4", features = ["check"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1"
hex = "0.4"
multibase = "0.8"
sha2 = "0.10.7"
sha3 = { version = "0.10.8", optional = true }
k256 = { version = "0.13.1", optional = true, features = ["ecdsa"] }
p256 = { version = "0.13.2", optional = true, features = ["ecdsa"] }
keccak-hash = { version = "0.7", optional = true }
ssi-jwk = { path = "../ssi-jwk", version = "0.1.1" }
ssi-json-ld = { path = "../ssi-json-ld", version = "0.2" }
ssi-core = { path = "../ssi-core", version = "0.1" }
ssi-dids = { path = "../ssi-dids", version = "0.1" }
ssi-crypto = { path = "../ssi-crypto", version = "0.1" }
ssi-jws = { path = "../ssi-jws", version = "0.1" }
ssi-tzkey = { path = "../ssi-tzkey", version = "0.1", optional = true }
ssi-caips = { path = "../ssi-caips", version = "0.1" }
ssi-contexts = { version = "0.1.5", path = "../contexts" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

[dev-dependencies]
async-std = { version = "1.9", features = ["attributes"] }
ssi-dids = { path = "../ssi-dids", version = "0.1", features = ["example"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
