[package]
name = "ssi-multicodec"
version = "0.1.0"
edition = "2021"
authors = ["Spruce Systems, Inc."]
license = "Apache-2.0"
description = "Implementation of the Multicodec specification for the ssi library"
repository = "https://github.com/spruceid/ssi/"
documentation = "https://docs.rs/ssi-multicodec/"

[dependencies]
unsigned-varint = "0.7.1"

[build-dependencies]
csv = "1.2.2"
thiserror.workspace = true